# NoMercy

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NoMercyLite.code-workspace  README.md  x64_create_vs_project.bat  x86_create_vs_project.bat
source/Client/SampleApp/: CMakeLists.txt
source/Client/SampleApp/src/: main.cpp
source/Client/StandaloneApp/: CMakeLists.txt
source/Client/StandaloneApp/src/: main.cpp
source/Client/UserModule/: CMakeLists.txt  SupportedOS.manifest
source/Client/UserModule/include/: tls_callback.h
source/Client/UserModule/src/: main.cpp  tls_callback.cpp
source/Core/EngineR3/: Application.cpp  Application.hpp  ApplicationCallbacks.cpp  CMakeLists.txt  CheatIDs.hpp  Core.cpp  Core.hpp  Entry.cpp  Index.hpp  PCH.hpp
source/Core/EngineR3/Access/: Access.cpp  Access.hpp  DACLManager.cpp  DecreasePrivileges.cpp  MitigationPolicyManager.cpp
source/Core/EngineR3/Anti/: AntiAnalysis.cpp  AntiBootkit.cpp  AntiBreakpoint.cpp  AntiBreakpoint.hpp  AntiDebug.cpp  AntiDebug.hpp  AntiEmulation.cpp  AntiEmulation.hpp  AntiHypervisor.cpp  AntiInputInjection.cpp  AntiInputInjection.hpp  AntiKernelDebug.cpp  AntiMacro.cpp  AntiMacro.hpp  AntiTrace.asm  AntiVirtualMachine.cpp
source/Core/EngineR3/App/: ClientInitMgr.cpp  ClientMainRoutine.cpp  TestInitMgr.cpp
source/Core/EngineR3/Common/: Analyser.hpp  BlockedToolCheck.cpp  CacheManager.cpp  CacheManager.hpp  CheatDBManager.cpp  CheatDBManager.hpp  CheatQueueManager.cpp  CheatQueueManager.hpp  DbgHelpWrapper.cpp  DbgHelpWrapper.hpp  DetectQueue.cpp  DetectQueue.hpp  ExceptionHandlers.cpp  ExceptionHandlers.hpp  FilterManager.cpp  FilterManager.hpp  Functions.cpp  Functions.hpp  GameIntegrationCheck.cpp  GameIntegrationCheck.hpp  HiddenMemoryExecutor.cpp  MTRandom.cpp  MTRandom.hpp  MessageProcManager.cpp  MessageProcManager.hpp  PdbHelperDia.cpp  PdbHelperDia.hpp  ProtectedMemory.cpp  ProtectedMemory.hpp  Quarentine.cpp  Quarentine.hpp  RestorePointHelper.cpp  RestorePointHelper.hpp  Terminator.cpp  Terminator.hpp  WMI.cpp  WMI.hpp  WMIAnalyser.cpp
source/Core/EngineR3/Crypto/: Base64.cpp  Base64.hpp  SealedBox.cpp  SealedBox.hpp
source/Core/EngineR3/Helper/: BcdHelper.cpp  BcdHelper.hpp  FileHelper.cpp  FileHelper.hpp  HandleHelper.cpp  HandleHelper.hpp  MBRHelper.hpp  MemoryHelper.cpp  MemoryHelper.hpp  MitigationPolicyHelper.cpp  ModuleHelper.cpp  ModuleHelper.hpp  PatternScanner.cpp  PatternScanner.hpp  PdbHelper.cpp  PdbHelper.hpp  ProcessHelper.cpp  ProcessHelper.hpp  SectionHelper.cpp  SectionHelper.hpp  SessionHelper.cpp  SessionHelper.hpp  SymbolHelper.cpp  SymbolHelper.hpp  ThreadHelper.cpp  ThreadHelper.hpp
source/Core/EngineR3/Hook/: AntiApfnHook.cpp  ApcFilter.hpp  ApcStub.asm  ApfnHooks.cpp  DllNotificationCallback.cpp  HookAnalyser.cpp  Hooks.cpp  Hooks.hpp  HotPatch.cpp  HotPatch.hpp  InlineHooks.cpp  InstrumentationCallback.cpp  InstrumentationCallbackThunk.asm  PageGuardHook.cpp  PageGuardHook.hpp  ShellcodeAnalyser.cpp  SyscallHook.cpp  Tls.hpp  VehSingleStepping.cpp
source/Core/EngineR3/IO/: DataLoader.hpp  DataLoaderCryptedFile.cpp  DataLoaderGame.cpp  DataLoaderRSA.cpp
source/Core/EngineR3/IPC/: RedirectedIOPipe.cpp  RedirectedIOPipe.hpp  SharedMemory.cpp  SharedMemory.hpp
source/Core/EngineR3/Monitor/: GameMemoryMonitor.cpp  GameMemoryMonitor.hpp  HardwareBreakpointWatcher.cpp  HardwareBreakpointWatcher.hpp  ManualMapScanner.cpp  ManualMapScanner.hpp  MemoryAccessDetect.cpp  MemoryAccessDetect.hpp  MemoryAllocationWatcher.cpp  MemoryAllocationWatcher.hpp  MemoryHookScanner.cpp  MemoryHookScanner.hpp  ModuleSectionMonitor.cpp  ModuleSectionMonitor.hpp  ParentCheck.cpp  ServiceMemoryMonitor.cpp  TickCounterThread.cpp  TickCounterThread.hpp  WinDebugMonitor.cpp  WinDebugMonitor.hpp  WindowsHookMonitor.cpp
source/Core/EngineR3/Network/: CloudflareChecker.hpp  CurlWebAPI.cpp  CurlWebAPI.hpp  FirewallHelper.hpp  NetManager.cpp  NetManager.hpp  WebSocketClient.cpp  WebSocketClient.hpp
source/Core/EngineR3/SDK/: SDKManager.cpp  SDKManager.hpp
source/Core/EngineR3/Scanner/: ICheatDBScanMethods.cpp  IDeviceScanner.cpp  IDirectXScanner.cpp  IDnsHistoryScanner.cpp  IDriverObjectScanner.cpp  IDriverScanner.cpp  IDriverShimScanner.cpp  IExceptionHandlerScanner.cpp  IFileScanner.cpp  IFirmwareScanner.cpp  IFolderScanner.cpp  IGdiHandleScanner.cpp  IGraphicDriverChecker.cpp  IHandleScanner.cpp  IHeapScanner.cpp  IHiddenProcessScanner.cpp  IInstalledDeviceScanner.cpp  IKeyStateChecker.cpp  IManualMapScanner.cpp  IMemoryWorkingWatchdogScanner.cpp  IMemoryWorkingWorkingSetScanner.cpp  IMitreMitigation.cpp  IModuleScanner.cpp  IMultipleGameScanner.cpp  INetworkScanner.cpp  IObjectDirScanner.cpp  IPciDeviceScanner.cpp  IPresentHookDetection.cpp  IProcessHollowingScanner.cpp  IProcessScanner.cpp  IProcessShimScanner.cpp  IPssScanner.cpp  IPythonScriptScanner.cpp  IRecentAppsScanner.cpp  IScannerWindowCallback.cpp  ISectionScanner.cpp  IServiceScanner.cpp  IStackTraceScanner.cpp  ISystemCertificateStoreScanner.cpp  ISystemProcessIntegrityScanner.cpp  (+17 more)
source/Core/EngineR3/SelfProtection/: CFGPatcher.cpp  MemoryTamperProtector.cpp  Pointers.hpp  ScreenProtection.cpp  SectionProtector.cpp  SelfAntiDump.cpp  SelfDestroyIAT.cpp  SelfDestroyModuleLinks.cpp  SelfPatchFinder.cpp  SelfProtectPE.cpp  SelfProtection.hpp  Watchdog.cpp  Watchdog.hpp
source/Core/EngineR3/Thread/: SelfThreadIdentifier.cpp  SelfThreadIdentifier.hpp  ThreadExitCallback.cpp  ThreadExitCallback.hpp  ThreadInterface.cpp  ThreadInterface.hpp  ThreadManagerHelper.cpp  ThreadManagerHelper.hpp  ThreadStackWalker.cpp  (+1 more)
source/Core/EngineR3_Core/: CMakeLists.txt  Cleancall_impl.asm  resource.rc
source/Core/EngineTLS/: CMakeLists.txt
source/Utilities/: CMakeLists.txt
source/Utilities/CheatDBGenerator/: CMakeLists.txt
source/Utilities/FileEncryptor/: CMakeLists.txt
source/Utilities/GameDataBuilder/: CMakeLists.txt
source/Utilities/GameIntegrityHelper/: CMakeLists.txt
source/Utilities/LogDecryptor/: CMakeLists.txt
source/Utilities/NoMercyDataBuilder/: CMakeLists.txt
source/Utilities/Protector/: CMakeLists.txt
(+215 files in other folders)
